--- a/events/events.html
+++ b/events/events.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="events.css">
     </head>
     <body>
-        <!-- <h1 class="heading">EVENTS</h1> -->
-        <!-- <div class="container"> -->
+        <h1 class="heading">EVENTS</h1>
+        <div class="container">
             <div class="row">
-                <div class="e1 box">
+                <div class="e1 box" style="fle">
                 <div class="imgBx">
                     <img class="" src="pictures/football.jpg" alt="">
                 </div>
@@ -21,7 +21,7 @@
                     <h2>FOOTBALL<br><span>Strongest Avenger<br>Smash</span></h2>
                 </div>
             </div>
-            <div class="box">
+            <div class="box box2">
                 <div class="imgBx 2">
                     <img src="pictures/cricket.jpg" alt="">
                 </div>
@@ -31,7 +31,7 @@
                     <h2>CRICKET<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
                 </div>
             </div>
-            <div class="box">
+            <div class="box box3">
                 <div class="imgBx">
                     <img src="pictures/badminton.jpg" alt="">
                 </div>
@@ -107,7 +107,7 @@
                 </div> 
             </div>
 
-        <!-- </div> -->
+        </div>
         
     <script src="events.js"></script>
 
