--- a/events/events.html
+++ b/events/events.html
@@ -12,7 +12,7 @@
         <h1 class="heading">EVENTS</h1>
         <div class="container">
             <div class="row">
-                <div class="box">
+                <div class="box" onclick="football()">
                     <div class="imgBx">
                         <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img1.jpg" alt="">
                     </div>
