--- a/events/events.html
+++ b/events/events.html
@@ -36,64 +36,55 @@
             <div class="row">
                 <div class="box" onclick="football()">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img1.jpg" alt="" onclick="football()">
+                        <img src="pictures/race.jpg" alt="Athletics" onclick="football()">
                     </div>
-                <h1 class="name">HOCKEY</h1>
+                <h1 class="name">Athletics</h1>
 
                     <div class="card-content">
-                        <h2>HOCKEY<br><span>Strongest Avenger<br>Smash</span></h2>
+                        <h2>Athletics<br><span>Strongest Avenger<br>Smash</span></h2>
                     </div>
                 </div>
                 <div class="box">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img2.jpg" alt="">
+                        <img src="pictures/volleyball.jpg" alt="Volleyball">
                     </div>
-                <h1 class="name">KABADDI</h1>
+                <h1 class="name">Volleyball</h1>
 
                     <div class="card-content">
-                        <h2>KABADDI<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
+                        <h2>Volleyball<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
                     </div>
                 </div>
                 <div class="box">
                     <div class="imgBx">
-                        <img src="pictures/table-tennis.jpg" alt="">
+                        <img src="pictures/football.jpg" alt="Football">
                     </div>
-                <h1 class="name">TABLE TENNIS</h1>
+                <h1 class="name">Football</h1>
 
                     <div class="card-content">
-                        <h2>TABLE TENNIS<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
+                        <h2>Football<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
                     </div>
                 </div> 
             </div>
             <div class="row">
+                
                 <div class="box">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img1.jpg" alt="">
+                        <img src="pictures/chess.jpg" alt="Chess">
                     </div>
-                <h1 class="name">HOCKEY</h1>
+                <h1 class="name">Chess</h1>
 
                     <div class="card-content">
-                        <h2>HOCKEY<br><span>Strongest Avenger<br>Smash</span></h2>
+                        <h2>Chess<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
                     </div>
                 </div>
                 <div class="box">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img2.jpg" alt="">
+                        <img src="pictures/basketball.jpg" alt="Basketball">
                     </div>
-                <h1 class="name">KABADDI</h1>
+                <h1 class="name">Basketball</h1>
 
                     <div class="card-content">
-                        <h2>KABADDI<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="imgBx">
-                        <img src="pictures/table-tennis.jpg" alt="">
-                    </div>
-                <h1 class="name">TABLE TENNIS</h1>
-
-                    <div class="card-content">
-                        <h2>TABLE TENNIS<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
+                        <h2>Basketball<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
                     </div>
                 </div> 
             </div>
@@ -101,32 +92,32 @@
             <div class="row">
                 <div class="box">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img1.jpg" alt="">
+                        <img src="pictures/badminton.jpg" alt="Badminton">
                     </div>
-                <h1 class="name">HOCKEY</h1>
+                <h1 class="name">Badminton</h1>
 
                     <div class="card-content">
-                        <h2>HOCKEY<br><span>Strongest Avenger<br>Smash</span></h2>
+                        <h2>Badminton<br><span>Strongest Avenger<br>Smash</span></h2>
                     </div>
                 </div>
                 <div class="box">
                     <div class="imgBx">
-                        <img src="https://raw.githubusercontent.com/Samaelish/Responsive-Cards-UI-Design/main/img2.jpg" alt="">
+                        <img src="pictures/kho-kho.jpg" alt="Kho Kho">
                     </div>
-                <h1 class="name">KABADDI</h1>
+                <h1 class="name">KHO KHO</h1>
 
                     <div class="card-content">
-                        <h2>KABADDI<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
+                        <h2>KHO KHO<br><span>Billionaire playboy <br>genius philanthropist</span></h2>
                     </div>
                 </div>
                 <div class="box">
                     <div class="imgBx">
-                        <img src="pictures/table-tennis.jpg" alt="">
+                        <img src="pictures/fun.jpg" alt="Fun Events">
                     </div>
-                <h1 class="name">TABLE TENNIS</h1>
+                <h1 class="name">FUN EVENTS</h1>
 
                     <div class="card-content">
-                        <h2>TABLE TENNIS<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
+                        <h2>FUN EVENTS<br><span>God of Thunder<br> Oscar for best entrance</span></h2>
                     </div>
                 </div> 
             </div>
@@ -143,7 +134,7 @@
                 <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
               </div>
               <div class="copyright">
-                &copy; Copyright <strong><span>Synergy</span></strong>.All Rights Reserved
+                &copy; Copyright <strong><span>Synergy</span></strong>. All Rights Reserved
               </div>
             </div>
         </footer>
