--- a/schedule/sch.html
+++ b/schedule/sch.html
@@ -20,29 +20,29 @@
   
 </head>
 <body>
-  <nav class="nav-section">
-      
-    <div class="navbar">
-    <div><img class="logo" src="../events/pictures/logo.png"></div>
-
-      <ul class="nav-menu">
-        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">SignUp</a></li>
-      </ul>
-    </div>
   
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-  </nav>
 <!-- MAHIMA SCHEDULE -->
-<link rel="stylesheet" href="sch.css"> 
+<!-- <link rel="stylesheet" href="sch.css">  -->
+<nav class="nav-section">
+      
+  <div class="navbar">
+  <div class="logo"><img src="logo.png"></div>
 
+    <ul class="nav-menu">
+      <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="../events/events.html" class="nav-link">Events</a></li>
+      <!-- <li class="nav-item"><a href="#" class="nav-link">Register</a></li> -->
+      <li class="nav-item"><a href="../schedule/sch.html" class="nav-link">Schedule</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Winners</a></li>
+    </ul>
+  </div>
+
+  <div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
+</nav>
 <div class="schedule">
     <div class="schedule-heading">
       EVENT SCHEDULE
@@ -103,21 +103,21 @@
     </div>
   </div>
   </div>
-      <footer id="footer">
-        <div class="footer-container">
-          <h3>IGNITE</h3>
-          <p>The sports fest of Indira gandhi delhi Technical University For Women</p>
-          <div class="social-links">
-            <a href="https://www.youtube.com/@synergyigdtuw2053" class="social"><i class="hover1 fa-brands fa-youtube"></i></a>
-            <a href="https://www.facebook.com/igdtuwsportsclub/" class="social"><i class="hover1 fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/synergy_igdtuw/?hl=en" class="social"><i class="hover1 fa-brands fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/synergy-sports-society-of-igdtuw/mycompany/" class="social"><i class="hover1 fa-brands fa-linkedin-in"></i></a>
-          </div>
-          <div class="copyright">
-            &copy; Copyright <strong><span>Synergy</span></strong>. All Rights Reserved
-          </div>
-        </div>
-    </footer>
+  <footer id="footer">
+    <div class="container">
+      <h3>IGNITE</h3>
+      <p>The sports fest of Indira Gandhi Delhi Technical University For Women</p>
+      <div class="social-links">
+        <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright <strong><span>Synergy</span></strong>.All Rights Reserved
+      </div>
+    </div>
+  </footer>
     <script src="sch.js"></script>
 </body>
 </html>
