--- a/events/events.html
+++ b/events/events.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Events</title>
+        <title>Ignite</title>
         <!-- favicon -->
         <!-- favicon -->
         <link rel="icon" type="image/x-icon" href="pictures/favicon.png">
@@ -116,9 +116,9 @@
                     </div>
                 </div>
                 <div class="box">
-                    <div class="imgBx">
+                    <!-- <div class="imgBx">
                         <img src="pictures/fun.jpg" alt="Fun Events">
-                    </div>
+                    </div> -->
                 <h1 class="name">FUN EVENTS</h1>
 
                     <div class="card-content">
@@ -131,18 +131,19 @@
         <footer id="footer">
             <div class="container">
               <h3>IGNITE</h3>
-              <p>The sports fest of Indira gandhi delhi Technical University For Women</p>
+              <p>The sports fest of Indira Gandhi Delhi Technical University For Women</p>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.youtube.com/@synergyigdtuw2053" class="social"><i class="hover1 fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/igdtuwsportsclub/" class="social"><i class="hover1 fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/synergy_igdtuw/?hl=en" class="social"><i class="hover1 fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/synergy-sports-society-of-igdtuw/mycompany/" class="social"><i class="hover1 fa-brands fa-linkedin-in"></i></a>
               </div>
               <div class="copyright">
                 &copy; Copyright <strong><span>Synergy</span></strong>. All Rights Reserved
               </div>
             </div>
         </footer>
+
         
     <script src="events.js"></script>
 
