--- a/Main page/index.html
+++ b/Main page/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            HOME PAGE
+          Ignite
         </title>
         <link rel="stylesheet" href="index.css"> 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" rel="stylesheet" type="text/css">
@@ -33,6 +33,8 @@
         <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
         <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
         <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
       <!--Navbar starts-->
@@ -161,13 +163,13 @@
               <h3>IGNITE</h3>
               <p>The sports fest of Indira Gandhi Delhi Technical University For Women</p>
               <div class="social-links">
-                <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.youtube.com/@synergyigdtuw2053" class="social"><i class="hover1 fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/igdtuwsportsclub/" class="social"><i class="hover1 fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/synergy_igdtuw/?hl=en" class="social"><i class="hover1 fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/synergy-sports-society-of-igdtuw/mycompany/" class="social"><i class="hover1 fa-brands fa-linkedin-in"></i></a>
               </div>
               <div class="copyright">
-                &copy; Copyright <strong><span>Synergy</span></strong>.All Rights Reserved
+                &copy; Copyright <strong><span>Synergy</span></strong>. All Rights Reserved
               </div>
             </div>
           </footer>
