--- a/schedule/sch.html
+++ b/schedule/sch.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>    
+    <title>Ignite</title>    
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Montserrat&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="sch.css">
     <!-- favicon -->
@@ -108,13 +109,13 @@
       <h3>IGNITE</h3>
       <p>The sports fest of Indira Gandhi Delhi Technical University For Women</p>
       <div class="social-links">
-        <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.youtube.com/@synergyigdtuw2053" class="social"><i class="hover1 fa-brands fa-youtube"></i></a>
+        <a href="https://www.facebook.com/igdtuwsportsclub/" class="social"><i class="hover1 fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/synergy_igdtuw/?hl=en" class="social"><i class="hover1 fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/synergy-sports-society-of-igdtuw/mycompany/" class="social"><i class="hover1 fa-brands fa-linkedin-in"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Synergy</span></strong>.All Rights Reserved
+        &copy; Copyright <strong><span>Synergy</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
